--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex02",
   "version": "1.0.0",
-  "main": "index.ts",
+"main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,7 +21,8 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "expo-router": "~5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
