--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex02",
   "version": "1.0.0",
-"main": "node_modules/expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,16 +13,18 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
     "expo": "~53.0.13",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-router": "~5.1.1"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
