--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^7.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
