--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
-    "expo": "~53.0.13",
+    "expo": "53.0.16",
     "expo-linear-gradient": "~14.1.5",
     "expo-router": "~5.1.2",
     "expo-status-bar": "~2.2.3",
+    "jwt-decode": "^4.0.0",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
